--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 JWT_SECRET=
+
+SUPABASE_API_KEY=
+SUPABASE_PROJECT_URL=
+SUPABASE_BUCKET_NAME=
